# EC_MOB

./: .gitignore  LICENCE.md  README_EN.md  README_FR.md
Calibration/: calibration_camera_DAVIS346_00000335-2025_1.xml  calibration_camera_DAVIS346_2.xml
Calibration/nouv/: calibration_camera_DAVIS346_00000335-2025_12_09_14_09_54.xml  calibration_camera_only_DAVIS346.yaml
DV/cam_imu_calib/dv-imu-cam-calibration/: .clang-format  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE.md  README.md
DV/cam_imu_calib/dv-imu-cam-calibration/docker/: Dockerfile  Dockerfile_no_filtering  README.md
DV/cam_imu_calib/dv-imu-cam-calibration/docs/: tutorial.md
DV/cam_imu_calib/dv-imu-cam-calibration/include/dv-imu-cam-calibration/camera_calibration/: camera_model.hpp  kalibr_calibration_target_optimization_problem.hpp  kalibr_camera_calibrator.hpp  kalibr_camera_geometry.hpp  kalibr_optimization_diverged.hpp
DV/cam_imu_calib/dv-imu-cam-calibration/include/dv-imu-cam-calibration/imu_camera_calibration/: iccCalibrator_utils.hpp  imu_params.hpp  kalibr_common.hpp  kalibr_iccCalibrator.hpp  kalibr_iccCamera.hpp  kalibr_iccImu.hpp
DV/cam_imu_calib/dv-imu-cam-calibration/include/dv-imu-cam-calibration/wrappers/: Calibrator.hpp  CalibratorBase.hpp  calibration_utils.hpp  repro_error_utils.hpp
DV/cam_imu_calib/dv-imu-cam-calibration/samples/: CMakeLists.txt
DV/cam_imu_calib/dv-imu-cam-calibration/samples/camera-calibration/: CMakeLists.txt  read_intrinsic_results.py  run_camera_calibration.cpp  run_camera_calibration.hpp  run_camera_calibration_all_devices.cpp  run_camera_calibration_all_methods.cpp  run_camera_calibration_all_patterns.cpp  run_camera_calibration_all_recordings.cpp
DV/cam_imu_calib/dv-imu-cam-calibration/src/: CMakeLists.txt
DV/cam_imu_calib/dv-imu-cam-calibration/src/kalibr_imu_camera_calibration/: CMakeLists.txt  kalibr_common.cpp
DV/cam_imu_calib/dv-imu-cam-calibration/src/modules/: CMakeLists.txt  ImuCamCalibration.cpp  MarkersDrawing.cpp
DV/cam_imu_calib/dv-imu-cam-calibration/tests/: CMakeLists.txt  test_all_calibration.cpp  test_imu_cam_calibration.hpp  test_mono_cam_calibration.hpp  test_stereo_cam_calibration.hpp  test_utils.hpp
Documentation/: erreur_apt_update_connection_failed.md
Documentation/Avancement/: création_du_dépot_git.md  etat_du_projet_16_decembre.md  rapport_migration_motion_comp_ros1_to_ros2.md
Documentation/explication_article_final/: explications.md
Documentation/migration_pkg_ros1_ros2/: explication_pkg_motion_compensation.md
project_ws/: notes_visual_studio_code.md
project_ws/docker_ros1/: Dockerfile  memento_docker.md
project_ws/src/: event_clustering  event_depth_midas  event_nav2_layer  event_segmentation  event_tf_static
project_ws/src/Motion-compensation/datasync/launch/: motion_compensation.launch
project_ws/src/agilex_ws/src/limo_car/gazebo/: ackermann_with_sensor.xacro
project_ws/src/agilex_ws/src/limo_ros2/limo_base/launch/: limo_base.launch.py
project_ws/src/agilex_ws/src/limo_ros2/limo_base/src/: limo_driver.cpp
project_ws/src/agilex_ws/src/limo_ros2/limo_bringup/maps/: 27052025-1.pgm  27052025-1.yaml  carte_test_Tao.pgm  carte_test_Tao.yaml  map11.pgm  map11.yaml  mapAZ.pgm  mapAZ.yaml  maptaocartho.pgm  maptaocartho.yaml  test23052025.pgm  test23052025.yaml  testmaplp.pgm  testmaplp.yaml
project_ws/src/agilex_ws/src/limo_ros2/limo_bringup/param/: nav2_ackermann.yaml  nav2_ackermann_rtab.yaml  nav2_diff.yaml  nav2_diff_rtab.yaml
project_ws/src/agilex_ws/src/limo_visions/src/: detect_line.cpp  detect_rgb.cpp
project_ws/src/agilex_ws/src/limo_visions/tools/Color-Recognition/: CMakeLists.txt
project_ws/src/agilex_ws/src/limo_visions/tools/Color-Recognition/scripts/: take_image.py
project_ws/src/agilex_ws/src/limo_visions/tools/Color-Recognition/src/: recognition.cpp
project_ws/src/datasync/: CMakeLists.txt  package.xml
project_ws/src/datasync/src/: Motion_Compensation.cpp
project_ws/src/datasync_2_0/: CMakeLists.txt  package.xml
project_ws/src/datasync_2_0/config/: motion_compensation.yaml
project_ws/src/datasync_2_0/event_clustering/: package.xml  setup.cfg  setup.py
project_ws/src/datasync_2_0/event_clustering/config/: clustering.yaml
project_ws/src/datasync_2_0/event_clustering/event_clustering/: clustering_node.py
project_ws/src/datasync_2_0/event_clustering/launch/: clustering.launch.py
project_ws/src/datasync_2_0/event_depth_midas/: package.xml  setup.cfg  setup.py
project_ws/src/datasync_2_0/event_depth_midas/config/: depth_midas.yaml
project_ws/src/datasync_2_0/event_depth_midas/event_depth_midas/: depth_midas_node.py
project_ws/src/datasync_2_0/event_depth_midas/launch/: depth_midas.launch.py
project_ws/src/datasync_2_0/event_nav2_layer/: CMakeLists.txt  package.xml
project_ws/src/datasync_2_0/event_nav2_layer/src/: event_nav2_layer.cpp
project_ws/src/datasync_2_0/event_segmentation/config/: segmentation.yaml
project_ws/src/datasync_2_0/event_segmentation/event_segmentation/: segmentation_node.py
project_ws/src/datasync_2_0/event_tf_static/: package.xml  setup.cfg  setup.py
project_ws/src/datasync_2_0/event_tf_static/config/: static_tf.yaml
project_ws/src/datasync_2_0/event_tf_static/event_tf_static/: static_tf_node.py
project_ws/src/datasync_2_0/event_tf_static/launch/: static_tf.launch.py
project_ws/src/datasync_2_0/launch/: ackermann_nav2_event_gazebo.launch.py  ackermann_nav2_event_pipeline.launch.py  ackermann_rtab_nav2_event_pipeline.launch.py  motion_compensation.launch.py  rosbag_pipeline.launch.py
project_ws/src/datasync_2_0/rviz/: rosbag_pipeline.rviz
project_ws/src/datasync_2_0/scripts/: run_event_mask_diagnostics.sh
project_ws/src/datasync_2_0/src/: Motion_Compensation.cpp
project_ws/src/datasync_ros2/: CMakeLists.txt  package.xml
project_ws/src/datasync_ros2/config/: davis346.yaml  dvxplorer.yaml
project_ws/src/datasync_ros2/launch/: motion_compensation.launch.py
project_ws/src/datasync_ros2/src/: motion_compensation_node.cpp
(+2 files in other folders)
