<?xml version="1.0"?>
<package format="3">
  <name>datasync_2_0</name>
  <version>0.0.0</version>
  <description>ROS 2 port of motion compensation logic from ROS 1 datasync.</description>
  <maintainer email="nochi@todo.todo">nochi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>event_camera_msgs</depend>
  <depend>event_camera_codecs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
