<?xml version="1.0"?>
<package format="3">
  <name>event_tf_static</name>
  <version>0.0.0</version>
  <description>Static TF publisher for event camera to base_link.</description>
  <maintainer email="nochi@todo.todo">nochi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
